kubernetes/caddy-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: caddy-ingress
  namespace: caddy-system
spec:
  rules:
    - host: blog.golang.im
      http:
        paths:
          - backend:
              serviceName: blog
              servicePort: 80
  # tls:
  # - hosts:
  #   - blog.golang.im
  #   secretName: golangim # use mycerts for host test.com
