kubernetes/kong-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong-ingress
spec:
  rules:
    - host: blog.golang.im
      http:
        paths:
          - backend:
              serviceName: blog
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plantuml-ingress
spec:
  rules:
    - host: plantuml.golang.im
      http:
        paths:
          - backend:
              serviceName: plantuml
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website-ingress
spec:
  rules:
    - host: golang.im
      http:
        paths:
          - backend:
              serviceName: website
              servicePort: 80
